fix panel spacing and remove unnecessary div

--- a/static/sass/_pattern_search-panel.scss
+++ b/static/sass/_pattern_search-panel.scss
@@ -3,7 +3,7 @@
   @include vf-u-text-muted;
 
   .p-search-panel {
-    margin-top: 2.4rem;
+    margin-top: 2.3rem;
     position : absolute;
     width: 100%;
 
